# datenplatform

./: .gitignore  README.md  airflow.yaml  superset-lb.yaml
airflow_dags/: refresh_bikes.py  refresh_freibe.py  refresh_frelo.py  refresh_garages.py  refresh_materialized_view_roxy.py  refresh_roxy.py  refresh_yoio.py  table_maintenance.py
clusters/Freiburg-DEV/: secret-operator.yaml
clusters/FreiburgDEV/: airflow-operator-helm-release.yaml  commons-operator-helm-release.yaml  kafka-operator-helm-release.yaml  secret-operator-helm-release.yaml  secret-operator-helm-source.yaml  secret-operator-kustomization.yaml  secret-operator-source.yaml  superset-operator-helm-release.yaml
clusters/FreiburgDEV/bugreport/: .kustomization.yaml.swp  (+1 more)
piveau/: Chart.yaml  README.md  values.yaml
scripts/dcat2trino/: README.md  __main__.py  dcat2trino.py  pyproject.toml  requirements.txt
scripts/dcat2trino/dcat2trino/: __main__.py  dcatimport.py  sql_check.py  trino_configuration.py.template  trino_connection.py  trino_connection.py.template  util.py  wfsimport.py
scripts/gdi_fr/: data_ingestion.py  data_ingestion_json.py  data_ingestion_json_test.py
source_definitions/: sources.json
testdata/charging_stations/: README.md  data.csv
trino/: schemas.sql
trino/materialized_views/: roxy_persistent.sql
trino/tables/: freibe_history.sql  frelo_history.sql  parking_garages_history.sql  roxy_history.sql  yoio_history.sql
trino/views/: charging_stations.sql  freibe.sql  frelo.sql  parking_garages.sql  roxy.sql  roxy_persistent.sql  verma_gga_lageklassen_gga_lk.sql  yoio.sql
(+126 files in other folders)
